# etymmap

./: .dockerignore  README.md  Readme.md  docker-compose.yaml  import_neo4j.sh  mongod.yaml  pyproject.toml
etymmap/: Readme.md
etymmap/analyze/: __init__.py  analyze.py  language_tree.py
etymmap/cli/: analyze.py  dump2mongo.py  export.py  extract.py  main.py
etymmap/data/: all_features.model  all_features.scaler  langtree.gpickle  langtree.graph  language_data.json  language_families.json  no_fuzzy.model  no_fuzzy.scaler  of-forms.txt
etymmap/extraction/: __init__.py  extractor.py  rules.py  section_extractor.py  serializers.py
etymmap/graph/: __init__.py  nodes.py  reduction.py  relation_types.py  relations.py  utils.py
etymmap/specific/: __init__.py  languages.py  parsing.py  plain_text.py  templates.py
etymmap/specific_en/: __init__.py  consts.py  languages.py  parsing.py  plain_text.py  template_helper.py  templates.py  utils.py
etymmap/utils/: __init__.py  section_text.py  utils.py
etymmap/wiktionary/: __init__.py  dump2db.py  dumps.py  wiktionary.py
frontend/: Dockerfile  Readme.md  pyproject.toml
frontend/assets/: app.css
frontend/explorer/: components.py  consts.py  cypher.py  cyto_elements.py  dbconsts.py  export.py  graph_data.py  main.py  neo4jconnector.py  utils.py
notebooks/: 2.a Historical Analysis.ipynb  4.a Gloss Similarity.ipynb  4.b Sections.ipynb  4.c Subgraphs.ipynb  Readme.md
notebooks/utils/: __init__.py  gloss_similarity.py  sections.py  subgraph_analysis.py  utils.py
tests/etymmap/: rules.py  test_entities.py
(+21 files in other folders)
