[virtualenvs]
in-project = true
create = true

[tool.poetry]
name = "etymmap"
version = "0.1.0"
description = "Extracting etymological data from the wiktionary."
authors = ["Markus Kobold <mkcode92@gmail.com>"]
include = ["etymmap"]

[tool.poetry.dependencies]
python = "3.9"
lxml = "^4.9.0"
networkx = "^2.8.3"
pandas = "^1.4.2"
pymongo = "^4.1.1"
requests = "^2.27.1"
tqdm = "^4.64.0"
scikit-learn = "1.0"
scipy = "1.8.0"
wikitextparser = "^0.47.4"
rdflib = "^6.2.0"
pydot = "^1.4.2"
pygraphviz = "^1.10"


[tool.poetry.dev-dependencies]
black = { extras = ["jupyter", "d"], version = "^22.8.0" }
jupyter = "^1.0.0"
matplotlib = "^3.5.3"

[tool.poetry.scripts]
etymmap = "etymmap.cli.main:main"
