[tool.poetry]
name = "etymmap-explorer"
version = "0.1.0"
description = "A frontend to explore the data extracted with etymmap."
authors = ["Markus Kobold <mkcode92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^2.8.3"
neo4j = "4.4.4"
dash = "2.6.1"
dash_cytoscape = "0.3.0"
dash_daq = "0.5.0"
dash-html-components = "2.0.0"
dash-bootstrap-components = "1.2.1"
xlsxwriter = "3.0.6"
etymmap = { path = "./etymmap/etymmap-0.1.0-py3-none-any.whl" }

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
black = "22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
